# enum_name

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  enum_name.hpp  version_selector.html
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/build-docs/: action.yaml
.github/actions/update-redirect-page/: action.yaml
.github/actions/update-version-selector/: action.yaml
.github/workflows/: c-cpp.yml  create-git-main-docs.yml  msvc.yml  trunk-check.yml
.trunk/: trunk.yaml
.trunk/setup-ci/: action.yaml
cmake/: enum_nameConfig.cmake.in
doc/: CMakeLists.txt  header.html  main.md.in
example/: CMakeLists.txt  main.cpp
git-main/: afterdoc_8h_source.html  annotated.html  args_8h_source.html  assert__returns__disabled_8cpp_source.html  autolink_8cpp.html  bug.html  chrono_8h_source.html  classA-members.html  classA.html  classAfterdoc__Test-members.html  classAfterdoc__Test.html  classAnswer.html  classAutolink__Test-members.html  classAutolink__Test.html  classB-members.html  classB.html  classC-members.html  classC.html  classC1.html  classC2.html  classC3.html  classC4.html  classC5.html  classD-members.html  classD.html  classE-members.html  classE.html  classEnum__Test-members.html  classEnum__Test.html  classExample__Test-members.html  classExample__Test.html  classFn__Test-members.html  classFn__Test.html  classInclude__Test-members.html  classInclude__Test.html  classJavadoc__Test-members.html  classJavadoc__Test.html  classMemgrp__Test-members.html  classMemgrp__Test.html  classMoveOnly-members.html  (+1577 more)
git-main/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_24.js  all_25.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  (+89 more)
include/: enum_name.hpp
include/mgutility/_common/: definitions.hpp
include/mgutility/reflection/: enum_name.hpp
include/mgutility/reflection/detail/: enum_for_each.hpp  enum_name_impl.hpp  meta.hpp
include/mgutility/std/: fixed_string.hpp  optional.hpp  string_view.hpp
scripts/: amalgamate.py  ci_setup_clang.sh
single_include/: mgutility_enum_name.hpp
test/: CMakeLists.txt  enum_name_test.cpp
tests/: CMakeLists.txt  test_enum_name.cpp
